# cc-accounting

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  project.rs  rowmetadata.rs
