[package]
name = "ccaccounting"
default-run = "ccaccounting_bin"
version = "0.1.0"
authors = ["mail@rusticorn.com"]
edition = "2021"
rust-version = "1.61"

[[bin]]
name = "ccaccounting_bin"
path = "src/main.rs"

[dependencies]
egui = "0.20"
egui_extras = "0.20"
eframe = { version = "0.20", features = ["persistence"] }
serde = { version = "1", features = [
    "derive",
] } # You only need this if you want app persistence
csv = "1.1"
tracing = "0.1"
opener = "0.5"
tracing-subscriber = "0.3"
