[package]
name = "ccaccounting"
default-run = "ccaccounting"
version = "0.1.0"
authors = ["mail@rusticorn.com"]
edition = "2021"
rust-version = "1.61"
description = "creditcard accounting tool"

[package.metadata.bundle]
identifier = "com.extrawurst.ccaccounting"

[[bin]]
name = "ccaccounting"
path = "src/main.rs"

[dependencies]
csv = "1.1"
eframe = { version = "0.20", features = ["persistence"] }
egui = "0.20"
egui_extras = "0.20"
opener = "0.5"
serde = { version = "1", features = [
    "derive",
] } # You only need this if you want app persistence
tracing = "0.1"
tracing-subscriber = "0.3"
